@@ -25,7 +25,9 @@ enum Edition {
     kPro,
     Trial_DO_NOT_USE_OR_THERE_WILL_BE_PAIN,
     kUnregistered,
-    kBusiness
+    kBusiness,
+    kBasic_China,
+    kPro_China
 };
 
 #endif // EDITIONTYPE_H
