@@ -56,6 +56,24 @@ TEST(SerialKeyEditionTests, SetEditionBusiness)
 	EXPECT_EQ("Synergy 1 Business", edition.getDisplayName());
 }
 
+TEST(SerialKeyEditionTests, SetEditionBasicChina)
+{
+    SerialKeyEdition edition;
+    edition.setType(kBasic_China);
+    EXPECT_EQ(kBasic_China, edition.getType());
+    EXPECT_EQ(SerialKeyEdition::BASIC_CHINA, edition.getName());
+    EXPECT_EQ("Synergy 中文版", edition.getDisplayName());
+}
+
+TEST(SerialKeyEditionTests, SetEditionProChina)
+{
+    SerialKeyEdition edition;
+    edition.setType(kPro_China);
+    EXPECT_EQ(kPro_China, edition.getType());
+    EXPECT_EQ(SerialKeyEdition::PRO_CHINA, edition.getName());
+    EXPECT_EQ("Synergy Pro 中文版", edition.getDisplayName());
+}
+
 
 
 
